Updated image handling